# gweled

./: .bzrignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  configure.ac  configure.in  gweled.desktop  meson.build
data/: Makefile.am  gweled.appdata.xml  gweled.appdata.xml.in  gweled.desktop  gweled.desktop.in  gweled.ui  meson.build  org.gweled.gweled.appdata.xml.in  org.gweled.gweled.desktop.in  org.gweled.gweled.gschema.xml
po/: LINGUAS  POTFILES.in  ar.po  bg.po  ca.po  da.po  de.po  es.po  fi.po  fr.po  gl.po  gweled.pot  he.po  hr.po  hu.po  it.po  ja.po  ka.po  lt.po  meson.build  ms.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  te.po  tr.po  uk.po  zh_CN.po
src/: Makefile.am  board_engine.c  board_engine.h  callbacks.c  callbacks.h  games-scores-backend.c  games-scores-dialog.c  graphic_engine.c  graphic_engine.h  gweled-gui.c  gweled-gui.h  gweled-headermenu.ui  gweled-scores.c  gweled-scores.h  gweled.glade  gweled.gresource.xml  gweled.ui  main.c  main.h  meson.build  music.c  music.h  sge_core.c  sge_core.h  sge_utils.c  sge_utils.h  sound.c  sound.h
