dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(gweled, 0.7)
AM_MAINTAINER_MODE
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

#### Check for GTK+ >= 2.14 ####
PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.14,,
	AC_MSG_ERROR([GTK+-2.14 is required to compile gweled]))

AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

#### Check for librsvg 2.0 ####
PKG_CHECK_MODULES(RSVG, librsvg-2.0,,
	AC_MSG_ERROR([librsvg-2.0 is required to compile gweled]))

AC_SUBST(RSVG_CFLAGS)
AC_SUBST(RSVG_LIBS)

#### Check for libgnomeui-2.0 ####
PKG_CHECK_MODULES(GNOME, libgnome-2.0,,
	AC_MSG_ERROR([libgnome-2.0 is required to compile gweled]))

AC_SUBST(GNOME_CFLAGS)
AC_SUBST(GNOME_LIBS)

#### Check for mikmod.h header ####
AC_CHECK_HEADER(mikmod.h,, AC_MSG_ERROR([libmikmod is required to compile gweled]))

MIKMOD_CFLAGS=`libmikmod-config --cflags`
MIKMOD_LIBS=`libmikmod-config --libs`
AC_SUBST(MIKMOD_CFLAGS)
AC_SUBST(MIKMOD_LIBS)

AC_CHECK_HEADER(pthread.h, [],
                  AC_MSG_ERROR([*** Cannot find pthread.h header]))
AC_CHECK_LIB(pthread, pthread_create,
                 [PTHREAD_LDFLAGS="$PTHREAD_LDFLAGS -lpthread"
                  PTHREAD_CFLAGS="$PTHREAD_CFLAGS -D_REENTRANT"],
                 [AC_CHECK_LIB(c_r, pthread_create,
                               [PTHREAD_LDFLAGS="$PTHREAD_LDFLAGS -pthread"
                                PTHREAD_CFLAGS="$PTHREAD_CFLAGS -D_THREAD_SAFE"],
                 AC_MSG_ERROR([*** Cannot find pthread library]))])
AC_SUBST(PTHREAD_CFLAGS)
AC_SUBST(PTHREAD_LDFLAGS)

LIBS="$LIBS -export-dynamic"

AC_ARG_ENABLE(setgid,
  [  --disable-setgid           Disable the use of setgid binaries],
  [case "${enableval}" in
    yes) setgid=true ;;
    no)  setgid=false ;;
    *) AC_MSG_ERROR(bad value ${enableval} for --disable-setgid) ;;
   esac],[setgid=true])
AC_SUBST(setgid)

AC_ARG_WITH(scores-group,
[  --with-scores-group=group    Group for the high score tables and binaries],
scores_group="$withval",scores_group="games")
AC_SUBST(scores_group)
AC_ARG_WITH(scores-user,
[  --with-scores-user=user    User for the high score tables],
scores_user="$withval",scores_user="games")
AC_SUBST(scores_user)

scoredir='${localstatedir}/games'
AC_SUBST(scoredir)

AC_OUTPUT([
Makefile
src/Makefile
])

echo "
** Configuration **

  Source code location:	  	   ${srcdir}
  Compiler:		  	   ${CC}

  Use setgid binaries                $setgid
  Scores user                        $scores_user
  Scores & setgid group              $scores_group
"
if grep -q "$scores_group:" /etc/group ; then
:;
else
echo
echo "Warning: The $scores_group group does not exist. Installation will"
echo "         succeed, but high score logging will not work. To specify a"
echo "         different group use the --with-scores-group option."
echo
fi
